--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <img class="book_2" src="img/♡.jpg">
     
     <a class="btn" href="https://www.notion.so/codigos-325dd1fb328b45fc92dee865c7e2acab?pvs=4"> Ir ao Site </a>
-
+Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur assumenda veniam reiciendis placeat possimus aliquam est mollitia dolorum numquam labore molestiae quod porro, cupiditate culpa at dignissimos odio odit facere?
 </body>
 </html>
